<resources>
    <string name="app_name">Job Search</string>
    <string name="enter_your_e_mail_hint">Enter your e-mail</string>
    <string name="enter_your_firstname_hint">Enter your first name</string>
    <string name="enter_your_lastname_hint">Enter your last name</string>
    <string name="enter_your_password_hint">Enter your password</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="don_t_have_an_account_text">Don\'t have an account? Sign up</string>
    <string name="have_an_account_text">Do you have an account? Sign in</string>

    <string-array name="cities">
        <item>Aktau</item>
        <item>Aktobe</item>
        <item>Almaty</item>
        <item>Atyrau</item>
        <item>Karagandy</item>
        <item>Kokshetau</item>
        <item>Kostanay</item>
        <item>Kyzylorda</item>
        <item>Nur-Sultan</item>
        <item>Oral</item>
        <item>Oskemen</item>
        <item>Pavlodar</item>
        <item>Petropavl</item>
        <item>Semey</item>
        <item>Shymkent</item>
        <item>Taraz</item>
        <item>Turkistan</item>
        <item>Zhezkazgan</item>
    </string-array>

    <string-array name="degree">
        <item>Secondary</item>
        <item>Secondary special</item>
        <item>Incomplete higher</item>
        <item>Bachelor</item>
    </string-array>

    <string-array name="languages">
        <item>Kazakh</item>
        <item>Russian</item>
        <item>English</item>
        <item>German</item>
        <item>French</item>
        <item>Chinese</item>
        <item>Spanish</item>
        <item>Portuguese</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
